Changes for 1.0beta14:

 - fixed patch for PostgreSQL (Alexei)

Changes for 1.0beta13:

 - fixed sending of alerts when PostgreSQL is used (Alexei)
 - sprintf() was replaced with snprintf() (Alexei)
 - fix for prefixes K,M and G (Alexei)
 - strncpy() was replaced with secure strscpy() where possible (Alexei)
 - fixed support for situation when one of graph's metrics has no values
 (Alexei)
 - added '2>/dev/null' to fping to get rid of message on the console (Alexei)
 - new icons and icon types for sysmaps (Alexei)
 - added columns color_on,color_off,drawtype_on,drawtype_off to table
 sysmaps_links (Alexei)
 - do not show group having no hosts in Latest Values (Alexei) 
 - better management of host groups (Alexei)
 - added support of macro {HOSTNAME}, removed support of %s (Alexei)
 - added support of macros {DATE} and {TIME} in alerts (Alexei)
 - fixed selection of multiplier in item definition form (Alexei)
 - support for 'icmppingsec' (Alexei)
 - added support of symbol '-' in keys used for trigger expressions (Alexei)
 - added information about table 'trends' to 'Status of Zabbix' screen (Alexei)
 - transparency for graphs on GD 2.x platforms (Alexei)
 - added timestamp and header to maps (Alexei)
 - fixes for screens.php (Alexei)
 - fixes for screenedit.php (Alexei)
 - added parameter DisablePinger (Alexei)
 - correct processing of RCPT TO responses from SMTP servers (Alexei)
 - correct processing of unsupported internal checks (Alexei)
 - processing of DB stopped situations for MySQL (Alexei)
 - housekeeper to delete hosts_groups entries (Alexei)
 - deleted host to be renamed to "<host> [DELETED]" (Alexei)
 - added function now() (Alexei)
 - fixed action maintenance screen (Alexei)
 - redesigned availablity chart (Alexei)
 - support for zabbix[trends] (Alexei)
 - added table 'trends' (Alexei)
 - cosmetic changes for IT Services screen (Alexei)
 - change of color schema for SLA graphs and report (Alexei)
 - redesigned IT Service availability chart (Alexei)