@@ -2,7 +2,6 @@
 
  - Battery.png have to be renamed to UPS.png?
  - test trigger scopes
- - problem when deleting item on PostgreSQL. have to delete trens before the item
  - 'clone' for graphs and screens
  - add screens and graphs to host templates
  - action to work in both cases (ON->OFF or OFF->ON). New macro, {RECOVERED}, ON->OFF='RECOVERED',
